Fix layout issues on documentation page in safari. Make header sticky

--- a/app/client/components/AppBar/AppBar.css
+++ b/app/client/components/AppBar/AppBar.css
@@ -11,10 +11,3 @@
   composes: appBar;
   background: #4e4c88;
 }
-
-.footer {
-  composes: appBar;
-  background: #6fb3e3;
-  height: 30px;
-  text-align: center;
-}
