--- a/app/client/containers/AppLayout.css
+++ b/app/client/containers/AppLayout.css
@@ -1,10 +1,20 @@
-.appLayout {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  height: min-content;
+.container {
   min-height: 100%;
-  align-items: stretch;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 75px;
+  z-index: 2;
+}
+
+.content {
+  margin-top: 75px;
+  min-height: calc(100% - 75px);
+  z-index: 1;
+  position: relative;
 }
 
 .contentWrapper {
